--- a/soalUlangan/matriks/xiips1.html
+++ b/soalUlangan/matriks/xiips1.html
@@ -33,7 +33,7 @@
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
       <div class="container">
-        <a href="../../"><img src="/matriks/soal/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
+        <a href="/index.html"><img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/">Ulangan Matematika</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/daftarisimateri.html">Daftar Materi</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -59,42 +69,42 @@
     <button type="button" class="list-group-item list-group-item-action active text-center fw-bold" aria-current="true">
       NAMA KELAS XI IPS 1
     </button>
-    <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	01.&nbsp;&nbsp;&nbsp;COK ISTRI DALIMA HASSYA ARRINANDA	</a>
-      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	02.&nbsp;&nbsp;&nbsp;DESAK NYOMAN ELYS TRI BHUANA	</a>
-      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	03.&nbsp;&nbsp;&nbsp;DEWA AGUNG YUMI DESWITA DEWI	</a>
-      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	04.&nbsp;&nbsp;&nbsp;DEWA AYU CAHAYA TRIA UTAMI	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	05.&nbsp;&nbsp;&nbsp;DEWA AYU DIAH PRATIWI	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	06.&nbsp;&nbsp;&nbsp;DEWA GDE INDRA SURYAWAN	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	07.&nbsp;&nbsp;&nbsp;DEWA GEDE PERMANA SAPUTRA	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	08.&nbsp;&nbsp;&nbsp;DEWA GEDE SATRIAWAN	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	09.&nbsp;&nbsp;&nbsp;DEWA KADEK KERTA WIBAWA	</a>
-      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	10.&nbsp;&nbsp;&nbsp;GEDE RIO BAHARI EKA PUTRA	</a>
-      <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	11.&nbsp;&nbsp;&nbsp;GUSTI AYU ANJALI KARUNI DEWI	</a>
-      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	12.&nbsp;&nbsp;&nbsp;GUSTI AYU SANKYA SRIAMILA	</a>
-      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	13.&nbsp;&nbsp;&nbsp;I DEWA AYU ISTRI AGUNG WIJA PARASTRI	</a>
-      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	14.&nbsp;&nbsp;&nbsp;I DEWA GEDE BAGUS INDRA DINATHA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	15.&nbsp;&nbsp;&nbsp;I DEWA GEDE SASTRA WIKRAMA	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	16.&nbsp;&nbsp;&nbsp;I DEWA NYOMAN GDE TRISNA JULYANDITA	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	17.&nbsp;&nbsp;&nbsp;I GUSTI AYU IDA PARAMITADEWI	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	18.&nbsp;&nbsp;&nbsp;I KADEK ADITYA WIDYAGUNA	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	19.&nbsp;&nbsp;&nbsp;I KADEK KRISNA PRADANA	</a>
-      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	20.&nbsp;&nbsp;&nbsp;IDA AYU AGUNG WAICITRIA SANJIWANI	</a>
-      <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	21.&nbsp;&nbsp;&nbsp;IDA BAGUS DARMA PRAMANA	</a>
-      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	22.&nbsp;&nbsp;&nbsp;IDA BAGUS MADE DIRGA DWIPAYANA	</a>
-      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	23.&nbsp;&nbsp;&nbsp;JUAN ALMER GAZA AL AZIZ	</a>
-      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	24.&nbsp;&nbsp;&nbsp;KADEK ARDEL JANITRADINATA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	25.&nbsp;&nbsp;&nbsp;KADEK AYU SEPTIAN MAHA SWARI	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	26.&nbsp;&nbsp;&nbsp;KOMANG TRIA KURNIA SEPTIANI	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	27.&nbsp;&nbsp;&nbsp;MADE HARI SURYA YANTI	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	28.&nbsp;&nbsp;&nbsp;NI GUSTI AYU DIAH LISTIANINGSIH	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	29.&nbsp;&nbsp;&nbsp;NI LUH PUTU ARYA KENCANA WATI	</a>
-      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	30.&nbsp;&nbsp;&nbsp;NI LUH PUTU DHESKIA AMELYA PURWANDARI	</a>
-      <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	31.&nbsp;&nbsp;&nbsp;NI MADE GEMMA OLIVIA PUTRI	</a>
-      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	32.&nbsp;&nbsp;&nbsp;NI PUTU INDRIANI	</a>
-      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	33.&nbsp;&nbsp;&nbsp;PANDE PUTU FREA JANITRA	</a>
-      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	34.&nbsp;&nbsp;&nbsp;PUTU EKA WIDYA INTAN PRAMESTI	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	35.&nbsp;&nbsp;&nbsp;PUTU GEDE IVAN STITHAPRAJNA	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	36.&nbsp;&nbsp;&nbsp;PUTU YUNIKA PRAMITA DEWI	</a>        
+      <a href="/soalUlangan/matriks/3WC4Gq6pan.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">01.&nbsp;&nbsp;&nbsp;COK ISTRI DALIMA HASSYA ARRINANDA</a>
+      <a href="/soalUlangan/matriks/5h85TRxZkF.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">02.&nbsp;&nbsp;&nbsp;DESAK NYOMAN ELYS TRI BHUANA</a>
+      <a href="/soalUlangan/matriks/78Xjm6ynZc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">03.&nbsp;&nbsp;&nbsp;DEWA AGUNG YUMI DESWITA DEWI</a>
+      <a href="/soalUlangan/matriks/bFVxnHQwDQ.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">04.&nbsp;&nbsp;&nbsp;DEWA AYU CAHAYA TRIA UTAMI</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">05.&nbsp;&nbsp;&nbsp;DEWA AYU DIAH PRATIWI</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">06.&nbsp;&nbsp;&nbsp;DEWA GDE INDRA SURYAWAN</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">07.&nbsp;&nbsp;&nbsp;DEWA GEDE PERMANA SAPUTRA</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">08.&nbsp;&nbsp;&nbsp;DEWA GEDE SATRIAWAN</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">09.&nbsp;&nbsp;&nbsp;DEWA KADEK KERTA WIBAWA</a>
+      <a href="/soalUlangan/matriks/z4mmaR9xjM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">10.&nbsp;&nbsp;&nbsp;GEDE RIO BAHARI EKA PUTRA</a>
+      <a href="/soalUlangan/matriks/3WC4Gq6pan.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">11.&nbsp;&nbsp;&nbsp;GUSTI AYU ANJALI KARUNI DEWI</a>
+      <a href="/soalUlangan/matriks/5h85TRxZkF.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">12.&nbsp;&nbsp;&nbsp;GUSTI AYU SANKYA SRIAMILA</a>
+      <a href="/soalUlangan/matriks/78Xjm6ynZc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">13.&nbsp;&nbsp;&nbsp;I DEWA AYU ISTRI AGUNG WIJA PARASTRI</a>
+      <a href="/soalUlangan/matriks/bFVxnHQwDQ.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">14.&nbsp;&nbsp;&nbsp;I DEWA GEDE BAGUS INDRA DINATHA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">15.&nbsp;&nbsp;&nbsp;I DEWA GEDE SASTRA WIKRAMA</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">16.&nbsp;&nbsp;&nbsp;I DEWA NYOMAN GDE TRISNA JULYANDITA</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">17.&nbsp;&nbsp;&nbsp;I GUSTI AYU IDA PARAMITADEWI</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">18.&nbsp;&nbsp;&nbsp;I KADEK ADITYA WIDYAGUNA</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">19.&nbsp;&nbsp;&nbsp;I KADEK KRISNA PRADANA</a>
+      <a href="/soalUlangan/matriks/z4mmaR9xjM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">20.&nbsp;&nbsp;&nbsp;IDA AYU AGUNG WAICITRIA SANJIWANI</a>
+      <a href="/soalUlangan/matriks/3WC4Gq6pan.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">21.&nbsp;&nbsp;&nbsp;IDA BAGUS DARMA PRAMANA</a>
+      <a href="/soalUlangan/matriks/5h85TRxZkF.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">22.&nbsp;&nbsp;&nbsp;IDA BAGUS MADE DIRGA DWIPAYANA</a>
+      <a href="/soalUlangan/matriks/78Xjm6ynZc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">23.&nbsp;&nbsp;&nbsp;JUAN ALMER GAZA AL AZIZ</a>
+      <a href="/soalUlangan/matriks/bFVxnHQwDQ.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">24.&nbsp;&nbsp;&nbsp;KADEK ARDEL JANITRADINATA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">25.&nbsp;&nbsp;&nbsp;KADEK AYU SEPTIAN MAHA SWARI</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">26.&nbsp;&nbsp;&nbsp;KOMANG TRIA KURNIA SEPTIANI</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">27.&nbsp;&nbsp;&nbsp;MADE HARI SURYA YANTI</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">28.&nbsp;&nbsp;&nbsp;NI GUSTI AYU DIAH LISTIANINGSIH</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">29.&nbsp;&nbsp;&nbsp;NI LUH PUTU ARYA KENCANA WATI</a>
+      <a href="/soalUlangan/matriks/z4mmaR9xjM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">30.&nbsp;&nbsp;&nbsp;NI LUH PUTU DHESKIA AMELYA PURWANDARI</a>
+      <a href="/soalUlangan/matriks/3WC4Gq6pan.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">31.&nbsp;&nbsp;&nbsp;NI MADE GEMMA OLIVIA PUTRI</a>
+      <a href="/soalUlangan/matriks/5h85TRxZkF.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">32.&nbsp;&nbsp;&nbsp;NI PUTU INDRIANI</a>
+      <a href="/soalUlangan/matriks/78Xjm6ynZc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">33.&nbsp;&nbsp;&nbsp;PANDE PUTU FREA JANITRA</a>
+      <a href="/soalUlangan/matriks/bFVxnHQwDQ.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">34.&nbsp;&nbsp;&nbsp;PUTU EKA WIDYA INTAN PRAMESTI</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">35.&nbsp;&nbsp;&nbsp;PUTU GEDE IVAN STITHAPRAJNA</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">36.&nbsp;&nbsp;&nbsp;PUTU YUNIKA PRAMITA DEWI</a>        
   </div>
 
                 </div>
