--- a/soalUlangan/matriks/xiips3.html
+++ b/soalUlangan/matriks/xiips3.html
@@ -33,7 +33,7 @@
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
       <div class="container">
-        <a href="../../"><img src="/matriks/soal/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
+        <a href="../../"><img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/">HOME UJIAN</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/daftarisimateri.html">Daftar Materi</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -58,42 +68,41 @@
     <button type="button" class="list-group-item list-group-item-action active text-center fw-bold" aria-current="true">
       NAMA KELAS XI IPS 3
     </button>
-    <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	01.&nbsp;&nbsp;&nbsp;ANAK AGUNG GDE ADIANDRA DANANJAYA	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	02.&nbsp;&nbsp;&nbsp;ANAK AGUNG ITA WIDYANTARI	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	03.&nbsp;&nbsp;&nbsp;DEWA AYU NYOMAN NARIRA TANA	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	04.&nbsp;&nbsp;&nbsp;DEWA GDE ANDIKA SAPUTRA NIDA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	05.&nbsp;&nbsp;&nbsp;DEWA GEDE WEDANA	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	06.&nbsp;&nbsp;&nbsp;GEDE BAGUS BAYU SAPUTRA	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	07.&nbsp;&nbsp;&nbsp;GUSTI AYU PUTU NAIDA RAFINA DEWI	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	08.&nbsp;&nbsp;&nbsp;GUSTI NGURAH ABHIMANYU	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	09.&nbsp;&nbsp;&nbsp;GUSTI NGURAH ARI SEMARA NATHA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	10.&nbsp;&nbsp;&nbsp;I GEDE AGUS EKA SUPUTRA KUBON	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	11.&nbsp;&nbsp;&nbsp;I KADEK ADITYA	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	12.&nbsp;&nbsp;&nbsp;I KADEK AGUS UDIYANA	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	13.&nbsp;&nbsp;&nbsp;I KADEK PANDE KARISMA KAPRIANA	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	14.&nbsp;&nbsp;&nbsp;I KOMANG HARTA YOGA NUGRAHA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	15.&nbsp;&nbsp;&nbsp;I MADE DWI DHARMA PUTRA	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	16.&nbsp;&nbsp;&nbsp;I PUTU SANDHITYA EKA PRADANA	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	17.&nbsp;&nbsp;&nbsp;I WAYAN CAMENG SEMARABAWA	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	18.&nbsp;&nbsp;&nbsp;I WAYAN GEDE GRIYAWANA	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	19.&nbsp;&nbsp;&nbsp;I WAYAN REGA SASTRA PRATAMA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	20.&nbsp;&nbsp;&nbsp;IDA BAGUS MADE SOMAYANA	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	21.&nbsp;&nbsp;&nbsp;KADEK HEMA CITRAMBANI	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	22.&nbsp;&nbsp;&nbsp;KADEK NIFAYANA	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	23.&nbsp;&nbsp;&nbsp;KETUT SUKA WIJAYA	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	24.&nbsp;&nbsp;&nbsp;NGAKAN PUTU OKTA RAMARTHA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	25.&nbsp;&nbsp;&nbsp;NI KADEK BULAN AYU GAYATRI PARAMITHA	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	26.&nbsp;&nbsp;&nbsp;NI KADEK DEVY NATALIA ADNYANA	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	27.&nbsp;&nbsp;&nbsp;NI KOMANG MUTIA SHAWARI	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	28.&nbsp;&nbsp;&nbsp;NI MADE ARI SUTRIASDIANI	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	29.&nbsp;&nbsp;&nbsp;NI PUTU AYU CANDRAWATI	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	30.&nbsp;&nbsp;&nbsp;NI PUTU DINDA PUTRI	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	31.&nbsp;&nbsp;&nbsp;NI WAYAN DHYANA PRAWINDIA	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	32.&nbsp;&nbsp;&nbsp;NICHOLAS AMAN SANTOSO	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	33.&nbsp;&nbsp;&nbsp;PANDE KOMANG SELVI AVIRA DEWI	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	34.&nbsp;&nbsp;&nbsp;PUTU OKII WAHYU ANA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	35.&nbsp;&nbsp;&nbsp;PUTU SHERIN ARTHA VARENSA	</a>
-      
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">01.&nbsp;&nbsp;&nbsp;ANAK AGUNG GDE ADIANDRA DANANJAYA</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">02.&nbsp;&nbsp;&nbsp;ANAK AGUNG ITA WIDYANTARI</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">03.&nbsp;&nbsp;&nbsp;DEWA AYU NYOMAN NARIRA TANA</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">04.&nbsp;&nbsp;&nbsp;DEWA GDE ANDIKA SAPUTRA NIDA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">05.&nbsp;&nbsp;&nbsp;DEWA GEDE WEDANA</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">06.&nbsp;&nbsp;&nbsp;GEDE BAGUS BAYU SAPUTRA</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">07.&nbsp;&nbsp;&nbsp;GUSTI AYU PUTU NAIDA RAFINA DEWI</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">08.&nbsp;&nbsp;&nbsp;GUSTI NGURAH ABHIMANYU</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">09.&nbsp;&nbsp;&nbsp;GUSTI NGURAH ARI SEMARA NATHA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">10.&nbsp;&nbsp;&nbsp;I GEDE AGUS EKA SUPUTRA KUBON</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">11.&nbsp;&nbsp;&nbsp;I KADEK ADITYA</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">12.&nbsp;&nbsp;&nbsp;I KADEK AGUS UDIYANA</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">13.&nbsp;&nbsp;&nbsp;I KADEK PANDE KARISMA KAPRIANA</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">14.&nbsp;&nbsp;&nbsp;I KOMANG HARTA YOGA NUGRAHA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">15.&nbsp;&nbsp;&nbsp;I MADE DWI DHARMA PUTRA</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">16.&nbsp;&nbsp;&nbsp;I PUTU SANDHITYA EKA PRADANA</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">17.&nbsp;&nbsp;&nbsp;I WAYAN CAMENG SEMARABAWA</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">18.&nbsp;&nbsp;&nbsp;I WAYAN GEDE GRIYAWANA</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">19.&nbsp;&nbsp;&nbsp;I WAYAN REGA SASTRA PRATAMA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">20.&nbsp;&nbsp;&nbsp;IDA BAGUS MADE SOMAYANA</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">21.&nbsp;&nbsp;&nbsp;KADEK HEMA CITRAMBANI</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">22.&nbsp;&nbsp;&nbsp;KADEK NIFAYANA</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">23.&nbsp;&nbsp;&nbsp;KETUT SUKA WIJAYA</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">24.&nbsp;&nbsp;&nbsp;NGAKAN PUTU OKTA RAMARTHA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">25.&nbsp;&nbsp;&nbsp;NI KADEK BULAN AYU GAYATRI PARAMITHA</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">26.&nbsp;&nbsp;&nbsp;NI KADEK DEVY NATALIA ADNYANA</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">27.&nbsp;&nbsp;&nbsp;NI KOMANG MUTIA SHAWARI</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">28.&nbsp;&nbsp;&nbsp;NI MADE ARI SUTRIASDIANI</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">29.&nbsp;&nbsp;&nbsp;NI PUTU AYU CANDRAWATI</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">30.&nbsp;&nbsp;&nbsp;NI PUTU DINDA PUTRI</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">31.&nbsp;&nbsp;&nbsp;NI WAYAN DHYANA PRAWINDIA</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">32.&nbsp;&nbsp;&nbsp;NICHOLAS AMAN SANTOSO</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">33.&nbsp;&nbsp;&nbsp;PANDE KOMANG SELVI AVIRA DEWI</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">34.&nbsp;&nbsp;&nbsp;PUTU OKII WAHYU ANA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">35.&nbsp;&nbsp;&nbsp;PUTU SHERIN ARTHA VARENSA</a>
   </div>
 
                 </div>
