--- a/soalUlangan/matriks/ximipa8.html
+++ b/soalUlangan/matriks/ximipa8.html
@@ -33,7 +33,7 @@
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
       <div class="container">
-        <a href="../../"><img src="/matriks/soal/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
+        <a href="../../"><img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/">HOME UJIAN</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/daftarisimateri.html">Daftar Materi</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -58,44 +68,44 @@
     <button type="button" class="list-group-item list-group-item-action active text-center fw-bold" aria-current="true">
       NAMA KELAS XI MIPA 8
     </button>
-    <a href="/matriks/ulangan/z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	01&nbsp;&nbsp;&nbsp; DESAK PUTU VANINA PRAMESWARI DEWI	</a>
-    <a href="/matriks/ulangan/zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	02&nbsp;&nbsp;&nbsp; DEWA BAGUS MAHESA IRAWADI	</a>
-    <a href="/matriks/ulangan/zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	03&nbsp;&nbsp;&nbsp; DEWA GEDE BAGUS WIBHISANA	</a>
-    <a href="/matriks/ulangan/zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	04&nbsp;&nbsp;&nbsp; I DEWA GD. ADI KUMARA SUMANTIKA	</a>
-    <a href="/matriks/ulangan/zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	05&nbsp;&nbsp;&nbsp; I KADEK SURYA PRADITYA	</a>
-    <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	06&nbsp;&nbsp;&nbsp; I MADE AGUS MERTHA YASA	</a>
-    <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	07&nbsp;&nbsp;&nbsp; I MADE ANDHIKA GITRA NUGRAHA	</a>
-    <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	08&nbsp;&nbsp;&nbsp; I MADE GEDE DANA ARJANA	</a>
-    <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	09&nbsp;&nbsp;&nbsp; I NYOMAN TEGUH PRANANTYA	</a>
-    <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	10&nbsp;&nbsp;&nbsp; I PUTU ADHI SURYANATA	</a>
-    <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	11&nbsp;&nbsp;&nbsp; I PUTU ADITYA PRAYOGA PUTRA	</a>
-    <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	12&nbsp;&nbsp;&nbsp; I PUTU ARYA KUSUMA AGUNG	</a>
-    <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	13&nbsp;&nbsp;&nbsp; I PUTU GUJJEG BUDIMAN	</a>
-    <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	14&nbsp;&nbsp;&nbsp; I PUTU PRASTIKA YUDA	</a>
-    <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	15&nbsp;&nbsp;&nbsp; IDA AYU ARI SWANDEWI	</a>
-    <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	16&nbsp;&nbsp;&nbsp; IDA AYU NANDI PUSPARINI	</a>
-    <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	17&nbsp;&nbsp;&nbsp; IDA BAGUS PARASARA MANUABA	</a>
-    <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	18&nbsp;&nbsp;&nbsp; KADEK DWI DARMA CAHYANI	</a>
-    <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	19&nbsp;&nbsp;&nbsp; LUH DWI MONETA PINATIH	</a>
-    <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	20&nbsp;&nbsp;&nbsp; MADE MASYITA KIARRA KESHA	</a>
-    <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	21&nbsp;&nbsp;&nbsp; NI KADEK ARMA LIDYA PUTRI	</a>
-    <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	22&nbsp;&nbsp;&nbsp; NI KADEK CAHYANI	</a>
-    <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	23&nbsp;&nbsp;&nbsp; NI KADEK GITA MAHESA RANI	</a>
-    <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	24&nbsp;&nbsp;&nbsp; NI KADEK MUTIARA ELMIDIA ANGGITASARI	</a>
-    <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	25&nbsp;&nbsp;&nbsp; NI KADEK WULAN CINTYA DEWI	</a>
-    <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	26&nbsp;&nbsp;&nbsp; NI KOMANG SARAS PRADEWI	</a>
-    <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	27&nbsp;&nbsp;&nbsp; NI PUTU DIAH MAHARANI	</a>
-    <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	28&nbsp;&nbsp;&nbsp; NI PUTU INTAN ALMAJANI ANGGITASARI	</a>
-    <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	29&nbsp;&nbsp;&nbsp; NI PUTU IRA DIANTARI	</a>
-    <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	30&nbsp;&nbsp;&nbsp; NI PUTU MEISYA ARI KELANI	</a>
-    <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	31&nbsp;&nbsp;&nbsp; NI WAYAN PARISTYA AMBALIKA	</a>
-    <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	32&nbsp;&nbsp;&nbsp; PANDE KETUT WIRA SEDANA PRASUTA	</a>
-    <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	33&nbsp;&nbsp;&nbsp; PANDE MADE DENDI SANGGRAPIANA	</a>
-    <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	34&nbsp;&nbsp;&nbsp; PANDE NYOMAN ANDRE DARMA SAPUTRA	</a>
-    <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	35&nbsp;&nbsp;&nbsp; PUTU ADYATMA JAYA DIPA	</a>
-    <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	36&nbsp;&nbsp;&nbsp; PUTU DESYA SUANJANI PUTRI	</a>
-    <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	37&nbsp;&nbsp;&nbsp; PUTU EKA SRI PATNI	</a>
-    <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	38&nbsp;&nbsp;&nbsp; PUTU KAYANA EKA APSARI	</a>
+    <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 01&nbsp;&nbsp;&nbsp; DESAK PUTU VANINA PRAMESWARI DEWI</a>
+    <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 02&nbsp;&nbsp;&nbsp; DEWA BAGUS MAHESA IRAWADI</a>
+    <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 03&nbsp;&nbsp;&nbsp; DEWA GEDE BAGUS WIBHISANA</a>
+    <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 04&nbsp;&nbsp;&nbsp; I DEWA GD. ADI KUMARA SUMANTIKA</a>
+    <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 05&nbsp;&nbsp;&nbsp; I KADEK SURYA PRADITYA</a>
+    <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 06&nbsp;&nbsp;&nbsp; I MADE AGUS MERTHA YASA</a>
+    <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 07&nbsp;&nbsp;&nbsp; I MADE ANDHIKA GITRA NUGRAHA</a>
+    <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 08&nbsp;&nbsp;&nbsp; I MADE GEDE DANA ARJANA</a>
+    <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 09&nbsp;&nbsp;&nbsp; I NYOMAN TEGUH PRANANTYA</a>
+    <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 10&nbsp;&nbsp;&nbsp; I PUTU ADHI SURYANATA</a>
+    <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 11&nbsp;&nbsp;&nbsp; I PUTU ADITYA PRAYOGA PUTRA</a>
+    <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 12&nbsp;&nbsp;&nbsp; I PUTU ARYA KUSUMA AGUNG</a>
+    <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 13&nbsp;&nbsp;&nbsp; I PUTU GUJJEG BUDIMAN</a>
+    <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 14&nbsp;&nbsp;&nbsp; I PUTU PRASTIKA YUDA</a>
+    <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 15&nbsp;&nbsp;&nbsp; IDA AYU ARI SWANDEWI</a>
+    <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 16&nbsp;&nbsp;&nbsp; IDA AYU NANDI PUSPARINI</a>
+    <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 17&nbsp;&nbsp;&nbsp; IDA BAGUS PARASARA MANUABA</a>
+    <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 18&nbsp;&nbsp;&nbsp; KADEK DWI DARMA CAHYANI</a>
+    <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 19&nbsp;&nbsp;&nbsp; LUH DWI MONETA PINATIH</a>
+    <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 20&nbsp;&nbsp;&nbsp; MADE MASYITA KIARRA KESHA</a>
+    <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 21&nbsp;&nbsp;&nbsp; NI KADEK ARMA LIDYA PUTRI</a>
+    <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 22&nbsp;&nbsp;&nbsp; NI KADEK CAHYANI</a>
+    <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 23&nbsp;&nbsp;&nbsp; NI KADEK GITA MAHESA RANI</a>
+    <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 24&nbsp;&nbsp;&nbsp; NI KADEK MUTIARA ELMIDIA ANGGITASARI</a>
+    <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 25&nbsp;&nbsp;&nbsp; NI KADEK WULAN CINTYA DEWI</a>
+    <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 26&nbsp;&nbsp;&nbsp; NI KOMANG SARAS PRADEWI</a>
+    <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 27&nbsp;&nbsp;&nbsp; NI PUTU DIAH MAHARANI</a>
+    <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 28&nbsp;&nbsp;&nbsp; NI PUTU INTAN ALMAJANI ANGGITASARI</a>
+    <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 29&nbsp;&nbsp;&nbsp; NI PUTU IRA DIANTARI</a>
+    <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 30&nbsp;&nbsp;&nbsp; NI PUTU MEISYA ARI KELANI</a>
+    <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 31&nbsp;&nbsp;&nbsp; NI WAYAN PARISTYA AMBALIKA</a>
+    <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 32&nbsp;&nbsp;&nbsp; PANDE KETUT WIRA SEDANA PRASUTA</a>
+    <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 33&nbsp;&nbsp;&nbsp; PANDE MADE DENDI SANGGRAPIANA</a>
+    <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 34&nbsp;&nbsp;&nbsp; PANDE NYOMAN ANDRE DARMA SAPUTRA</a>
+    <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 35&nbsp;&nbsp;&nbsp; PUTU ADYATMA JAYA DIPA</a>
+    <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 36&nbsp;&nbsp;&nbsp; PUTU DESYA SUANJANI PUTRI</a>
+    <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 37&nbsp;&nbsp;&nbsp; PUTU EKA SRI PATNI</a>
+    <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 38&nbsp;&nbsp;&nbsp; PUTU KAYANA EKA APSARI</a>
         
 
   </div>
