--- a/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html
+++ b/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html
@@ -33,35 +33,24 @@
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
       <div class="container">
-        <a href="../../"><img src="/matriks/soal/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
+        <a href="../../"><img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/daftarisimateri.html">Daftar Materi</a>
+            </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">HALAMAN </a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                    <a class="dropdown-item" href="/matriks/ulangan/ximipa7.html">XI MIPA 7</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="/matriks/ulangan/ximipa8.html">XI MIPA 8</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="/matriks/ulangan/ximipa9.html">XI MIPA 9</a>
-                  </li>
-                <li>
-                  <a class="dropdown-item" href="/matriks/ulangan/xiips1.html">XI IPS 1</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/matriks/ulangan/xiips2.html">XI IPS 2</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/matriks/ulangan/xiips3.html">XI IPS 3</a>
-                </li>
-
+                <li><a class="dropdown-item" href="/kumpulanSoal/matriks/">Soal Latihan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
               </ul>
             </li>
           </ul>
