--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/daftarisimateri.html">Daftar Isi Materi</a>
+              <a class="nav-link active" aria-current="page" href="/daftarisimateri.html">Daftar Materi</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
