--- a/kumpulanSoal/matriks/index.html
+++ b/kumpulanSoal/matriks/index.html
@@ -26,7 +26,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <title>ULANGAN MATRIKS</title>
+    <title>Soal Latihan Matriks</title>
     <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
   <body id="home">
@@ -59,17 +59,15 @@
     </nav>
     <!-- navbar end -->
 
-    <section style="padding-top: 7rem;" >
+    <section style="padding-top: 7rem; padding-bottom: 9rem;" class="mb-3">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <!-- ================================tempatkan dibawah ini soalnya-->
-                    <iframe data-tally-src="https://tally.so/embed/mRGep4?transparentBackground=1" width="100%" height="780" frameborder="0" marginheight="0" marginwidth="0" title="ULANGAN MATRIKS 04"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
-                </div>
+                <div class="col text-center">
+                    <h1>Kumpulan Latihan Soal<br> Matriks Dasar dan Operasi Matriks</h1>
             </div>
         </div>
     </section>
-    <section></section>
+
     
     <!-- footer start -->
     <footer class="bg-primary d-flex justify-content-center">
