--- a/soalUlangan/matriks/xiips2.html
+++ b/soalUlangan/matriks/xiips2.html
@@ -33,7 +33,7 @@
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
       <div class="container">
-        <a href="../../"><img src="/matriks/soal/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
+        <a href="../../"><img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/">HOME UJIAN</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/daftarisimateri.html">Daftar Materi</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -58,41 +68,41 @@
                     <button type="button" class="list-group-item list-group-item-action active text-center fw-bold" aria-current="true">
       NAMA KELAS XI IPS 2
     </button>
-    <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	01.&nbsp;&nbsp;&nbsp;ANAK AGUNG ADISTYA DAMAYANTI	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	02.&nbsp;&nbsp;&nbsp;ANAK AGUNG GEDE NGURAH	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	03.&nbsp;&nbsp;&nbsp;DEWA AYU INTAN CANDRIKA DEWI	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	04.&nbsp;&nbsp;&nbsp;DEWA AYU WEDA SANTHI MERANGGI	</a>
-      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	05.&nbsp;&nbsp;&nbsp;DEWA GDE AGUNG KSATRIA PINANDITA	</a>
-      <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	06.&nbsp;&nbsp;&nbsp;DEWA GDE SONI JAGADITA	</a>
-      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	07.&nbsp;&nbsp;&nbsp;DEWA GEDE AGUNG SAHADEWA	</a>
-      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	08.&nbsp;&nbsp;&nbsp;DEWA GEDE BAGUS ADIWIGUNA	</a>
-      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	09.&nbsp;&nbsp;&nbsp;DEWA NYOMAN BAYU PRADNYANA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	10.&nbsp;&nbsp;&nbsp;GUSTI AGUNG DHARMA CAHYA ARI MUKTI	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	11.&nbsp;&nbsp;&nbsp;I DEWA GEDE RAI ARTHA SUYASA	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	12.&nbsp;&nbsp;&nbsp;I GEDE PUTRA GILHUAN	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	13.&nbsp;&nbsp;&nbsp;I GUSTI AYU AMANDA ERNAWATI	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	14.&nbsp;&nbsp;&nbsp;I GUSTI AYU MAS WIDIA SEMARI	</a>
-      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	15.&nbsp;&nbsp;&nbsp;I KADEK ANDHIKA SENA PUTRA	</a>
-      <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	16.&nbsp;&nbsp;&nbsp;I KADEK BASKARA	</a>
-      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	17.&nbsp;&nbsp;&nbsp;I KADEK DIVA	</a>
-      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	18.&nbsp;&nbsp;&nbsp;I KETUT SUDIYASA	</a>
-      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	19.&nbsp;&nbsp;&nbsp;I KOMANG ARIANA	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	20.&nbsp;&nbsp;&nbsp;I WAYAN ARI TAMA	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	21.&nbsp;&nbsp;&nbsp;IDA AYU DWI ADNYASWARI	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	22.&nbsp;&nbsp;&nbsp;IDA AYU PUTU WULAN DARI DEWI	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	23.&nbsp;&nbsp;&nbsp;KADEK HERY ARIAWAN	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	24.&nbsp;&nbsp;&nbsp;KADEK MELANIE YUSTIKALOVA WARTANA	</a>
-      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	25.&nbsp;&nbsp;&nbsp;KOMANG INDRAJAYA PUTRA	</a>
-      <a href="	/matriks/ulangan/	3WC4Gq6pan.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	26.&nbsp;&nbsp;&nbsp;LUH PUTU JEZA ARINI	</a>
-      <a href="	/matriks/ulangan/	5h85TRxZkF.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	27.&nbsp;&nbsp;&nbsp;MADE GANGGA DEVI MARUTI	</a>
-      <a href="	/matriks/ulangan/	78Xjm6ynZc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	28.&nbsp;&nbsp;&nbsp;NI KADEK FEBRIANTI	</a>
-      <a href="	/matriks/ulangan/	bFVxnHQwDQ.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	29.&nbsp;&nbsp;&nbsp;NI KADEK TESA WIDIANTARI	</a>
-      <a href="	/matriks/ulangan/	EyXYuKEGfq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	30.&nbsp;&nbsp;&nbsp;NI KOMANG ULANDARI	</a>
-      <a href="	/matriks/ulangan/	FzVNHsWxXE.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	31.&nbsp;&nbsp;&nbsp;NYOMAN MAYRA RISKA DAMAYANTI	</a>
-      <a href="	/matriks/ulangan/	hnaqwXD6Tn.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	32.&nbsp;&nbsp;&nbsp;PANDE PUTU ARCELLO ADHICHANDRA	</a>
-      <a href="	/matriks/ulangan/	TjpG3x9qyM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	33.&nbsp;&nbsp;&nbsp;PUTU BAGAS PRADNYANA	</a>
-      <a href="	/matriks/ulangan/	TpEmXQcxqD.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	34.&nbsp;&nbsp;&nbsp;PUTU GEDE BAYU SETIAWAN	</a>
-      <a href="	/matriks/ulangan/	z4mmaR9xjM.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">	35.&nbsp;&nbsp;&nbsp;SATRIYA PRAJNA CHIDANANDA	</a> 
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">01.&nbsp;&nbsp;&nbsp;ANAK AGUNG ADISTYA DAMAYANTI</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">02.&nbsp;&nbsp;&nbsp;ANAK AGUNG GEDE NGURAH</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">03.&nbsp;&nbsp;&nbsp;DEWA AYU INTAN CANDRIKA DEWI</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">04.&nbsp;&nbsp;&nbsp;DEWA AYU WEDA SANTHI MERANGGI</a>
+      <a href="/soalUlangan/matriks/z4mmaR9xjM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">05.&nbsp;&nbsp;&nbsp;DEWA GDE AGUNG KSATRIA PINANDITA</a>
+      <a href="/soalUlangan/matriks/3WC4Gq6pan.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">06.&nbsp;&nbsp;&nbsp;DEWA GDE SONI JAGADITA</a>
+      <a href="/soalUlangan/matriks/5h85TRxZkF.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">07.&nbsp;&nbsp;&nbsp;DEWA GEDE AGUNG SAHADEWA</a>
+      <a href="/soalUlangan/matriks/78Xjm6ynZc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">08.&nbsp;&nbsp;&nbsp;DEWA GEDE BAGUS ADIWIGUNA</a>
+      <a href="/soalUlangan/matriks/bFVxnHQwDQ.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">09.&nbsp;&nbsp;&nbsp;DEWA NYOMAN BAYU PRADNYANA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">10.&nbsp;&nbsp;&nbsp;GUSTI AGUNG DHARMA CAHYA ARI MUKTI</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">11.&nbsp;&nbsp;&nbsp;I DEWA GEDE RAI ARTHA SUYASA</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">12.&nbsp;&nbsp;&nbsp;I GEDE PUTRA GILHUAN</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">13.&nbsp;&nbsp;&nbsp;I GUSTI AYU AMANDA ERNAWATI</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">14.&nbsp;&nbsp;&nbsp;I GUSTI AYU MAS WIDIA SEMARI</a>
+      <a href="/soalUlangan/matriks/z4mmaR9xjM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">15.&nbsp;&nbsp;&nbsp;I KADEK ANDHIKA SENA PUTRA</a>
+      <a href="/soalUlangan/matriks/3WC4Gq6pan.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">16.&nbsp;&nbsp;&nbsp;I KADEK BASKARA</a>
+      <a href="/soalUlangan/matriks/5h85TRxZkF.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">17.&nbsp;&nbsp;&nbsp;I KADEK DIVA</a>
+      <a href="/soalUlangan/matriks/78Xjm6ynZc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">18.&nbsp;&nbsp;&nbsp;I KETUT SUDIYASA</a>
+      <a href="/soalUlangan/matriks/bFVxnHQwDQ.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">19.&nbsp;&nbsp;&nbsp;I KOMANG ARIANA</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">20.&nbsp;&nbsp;&nbsp;I WAYAN ARI TAMA</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">21.&nbsp;&nbsp;&nbsp;IDA AYU DWI ADNYASWARI</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">22.&nbsp;&nbsp;&nbsp;IDA AYU PUTU WULAN DARI DEWI</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">23.&nbsp;&nbsp;&nbsp;KADEK HERY ARIAWAN</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">24.&nbsp;&nbsp;&nbsp;KADEK MELANIE YUSTIKALOVA WARTANA</a>
+      <a href="/soalUlangan/matriks/z4mmaR9xjM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">25.&nbsp;&nbsp;&nbsp;KOMANG INDRAJAYA PUTRA</a>
+      <a href="/soalUlangan/matriks/3WC4Gq6pan.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">26.&nbsp;&nbsp;&nbsp;LUH PUTU JEZA ARINI</a>
+      <a href="/soalUlangan/matriks/5h85TRxZkF.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">27.&nbsp;&nbsp;&nbsp;MADE GANGGA DEVI MARUTI</a>
+      <a href="/soalUlangan/matriks/78Xjm6ynZc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">28.&nbsp;&nbsp;&nbsp;NI KADEK FEBRIANTI</a>
+      <a href="/soalUlangan/matriks/bFVxnHQwDQ.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">29.&nbsp;&nbsp;&nbsp;NI KADEK TESA WIDIANTARI</a>
+      <a href="/soalUlangan/matriks/EyXYuKEGfq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">30.&nbsp;&nbsp;&nbsp;NI KOMANG ULANDARI</a>
+      <a href="/soalUlangan/matriks/FzVNHsWxXE.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">31.&nbsp;&nbsp;&nbsp;NYOMAN MAYRA RISKA DAMAYANTI</a>
+      <a href="/soalUlangan/matriks/hnaqwXD6Tn.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">32.&nbsp;&nbsp;&nbsp;PANDE PUTU ARCELLO ADHICHANDRA</a>
+      <a href="/soalUlangan/matriks/TjpG3x9qyM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">33.&nbsp;&nbsp;&nbsp;PUTU BAGAS PRADNYANA</a>
+      <a href="/soalUlangan/matriks/TpEmXQcxqD.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">34.&nbsp;&nbsp;&nbsp;PUTU GEDE BAYU SETIAWAN</a>
+      <a href="/soalUlangan/matriks/z4mmaR9xjM.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">35.&nbsp;&nbsp;&nbsp;SATRIYA PRAJNA CHIDANANDA</a> 
                 </div>
                 </div>
             </div>
