--- a/soalUlangan/matriks/ximipa9.html
+++ b/soalUlangan/matriks/ximipa9.html
@@ -33,7 +33,7 @@
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
       <div class="container">
-        <a href="../../"><img src="/matriks/soal/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
+        <a href="../../"><img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/matriks/ulangan/">HOME UJIAN</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/daftarisimateri.html">Daftar Materi</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -58,45 +68,45 @@
     <button type="button" class="list-group-item list-group-item-action active text-center fw-bold" aria-current="true">
       NAMA KELAS XI MIPA 9
     </button>
-       <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	01.&nbsp;&nbsp;&nbsp;  ANAK AGUNG GDE PRATISTHITA PUTRA MARKANDEYA	</a>
-        <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	02.&nbsp;&nbsp;&nbsp;  ANAK AGUNG ISTRI APSARI UTAMI P	</a>
-        <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	03.&nbsp;&nbsp;&nbsp;  ANAK AGUNG ISTRI ARIMAS NARESWARI PUTRI	</a>
-        <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	04.&nbsp;&nbsp;&nbsp;  ANAK AGUNG ISTRI DESSY ARDIANTI PRATIWI	</a>
-        <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	05.&nbsp;&nbsp;&nbsp;  ANAK AGUNG ISTRI LINDA YUNI	</a>
-        <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	06.&nbsp;&nbsp;&nbsp;  DEWA AYU ADE KRISNAWATI	</a>
-        <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	07.&nbsp;&nbsp;&nbsp;  DEWA AYU DIAH KRISTHIAN DEWI	</a>
-        <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	08.&nbsp;&nbsp;&nbsp;  DEWA AYU REVA APRILIA PUTRI	</a>
-        <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	09.&nbsp;&nbsp;&nbsp;  GDE KAYANA PUTRA GUNAMULYA	</a>
-        <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	10.&nbsp;&nbsp;&nbsp;  GITA SASMITA AMANDARI	</a>
-        <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	11.&nbsp;&nbsp;&nbsp;  I DEWA GEDE AGUNG ANGGARA PURNAMA	</a>
-        <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	12.&nbsp;&nbsp;&nbsp;  I DEWA GEDE AISWARYA ASADHA	</a>
-        <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	13.&nbsp;&nbsp;&nbsp;  I GUSTI AGUNG NANDA ADINATA	</a>
-        <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	14.&nbsp;&nbsp;&nbsp;  I GUSTI NGURAH YOGI INDRAWAN	</a>
-        <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	15.&nbsp;&nbsp;&nbsp;  I KADEK ADITYA SURYA YUDISTIRA	</a>
-        <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	16.&nbsp;&nbsp;&nbsp;  I KADEK ANGGANTARA PUTRA	</a>
-        <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	17.&nbsp;&nbsp;&nbsp;  I KOMANG TRI MAHAYANA	</a>
-        <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	18.&nbsp;&nbsp;&nbsp;  I MADE ADI ANGGAYANA	</a>
-        <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	19.&nbsp;&nbsp;&nbsp;  I MADE DANAN JAYA	</a>
-        <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	20.&nbsp;&nbsp;&nbsp;  I MADE SANDYA ISYANA	</a>
-        <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	21.&nbsp;&nbsp;&nbsp;  I PUTU TRESSNA ARISTA	</a>
-        <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	22.&nbsp;&nbsp;&nbsp;  KADEK INTAN PRABASWARI	</a>
-        <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	23.&nbsp;&nbsp;&nbsp;  KOMANG INA OKTAVIANI	</a>
-        <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	24.&nbsp;&nbsp;&nbsp;  MADE HANDHIKA WIGUNA	</a>
-        <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	25.&nbsp;&nbsp;&nbsp;  NI KADEK PRATISTA HAPSARI MANIK	</a>
-        <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	26.&nbsp;&nbsp;&nbsp;  NI KETUT ARI PERTIWI	</a>
-        <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	27.&nbsp;&nbsp;&nbsp;  NI LUH ADE THRESIA	</a>
-        <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	28.&nbsp;&nbsp;&nbsp;  NI MADE DEA RAHMADANI	</a>
-        <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	29.&nbsp;&nbsp;&nbsp;  NI MADE DINDA PRAMAPUTRI	</a>
-        <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	30.&nbsp;&nbsp;&nbsp;  NI PUTU ANGGI RIZAPANI	</a>
-        <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	31.&nbsp;&nbsp;&nbsp;  NI PUTU ARY PUTRI CAHYANI	</a>
-        <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	32.&nbsp;&nbsp;&nbsp;  NI PUTU NAVANITHA APRILIA PRASANTHI	</a>
-        <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	33.&nbsp;&nbsp;&nbsp;  NI PUTU RISMA CAHYANI	</a>
-        <a href="/matriks/ulangan/	zje1cm4r11kqjgmmzc.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	34.&nbsp;&nbsp;&nbsp;  NYOMAN ARYA WEDANTA PRAJA GAUTAMA	</a>
-        <a href="/matriks/ulangan/	zf15c14sk3nhethr5r.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	35.&nbsp;&nbsp;&nbsp;  PANDE PUTU ABY GOTAMA	</a>
-        <a href="/matriks/ulangan/	z13i93ozczr1neh6d9.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	36.&nbsp;&nbsp;&nbsp;  PANDE PUTU SIVAZEKA MAHENDRA	</a>
-        <a href="/matriks/ulangan/	zr976pde0u2vol70lq.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	37.&nbsp;&nbsp;&nbsp;  PUTU RADINA RIAFANY	</a>
-        <a href="/matriks/ulangan/	zr9v18iv11q5fu0g2q.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	38.&nbsp;&nbsp;&nbsp;  PUTU RAMA ADITYA NUGRAHA	</a>
-        <a href="/matriks/ulangan/	zm97o4ya9dwh0q3r03.html	" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 	39.&nbsp;&nbsp;&nbsp;  SANG NYOMAN TRI WISESA MAHA JAYA	</a>
+        <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 01.&nbsp;&nbsp;&nbsp;  ANAK AGUNG GDE PRATISTHITA PUTRA MARKANDEYA</a>
+        <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 02.&nbsp;&nbsp;&nbsp;  ANAK AGUNG ISTRI APSARI UTAMI P</a>
+        <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 03.&nbsp;&nbsp;&nbsp;  ANAK AGUNG ISTRI ARIMAS NARESWARI PUTRI</a>
+        <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 04.&nbsp;&nbsp;&nbsp;  ANAK AGUNG ISTRI DESSY ARDIANTI PRATIWI</a>
+        <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 05.&nbsp;&nbsp;&nbsp;  ANAK AGUNG ISTRI LINDA YUNI</a>
+        <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 06.&nbsp;&nbsp;&nbsp;  DEWA AYU ADE KRISNAWATI</a>
+        <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 07.&nbsp;&nbsp;&nbsp;  DEWA AYU DIAH KRISTHIAN DEWI</a>
+        <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 08.&nbsp;&nbsp;&nbsp;  DEWA AYU REVA APRILIA PUTRI</a>
+        <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 09.&nbsp;&nbsp;&nbsp;  GDE KAYANA PUTRA GUNAMULYA</a>
+        <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 10.&nbsp;&nbsp;&nbsp;  GITA SASMITA AMANDARI</a>
+        <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 11.&nbsp;&nbsp;&nbsp;  I DEWA GEDE AGUNG ANGGARA PURNAMA</a>
+        <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 12.&nbsp;&nbsp;&nbsp;  I DEWA GEDE AISWARYA ASADHA</a>
+        <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 13.&nbsp;&nbsp;&nbsp;  I GUSTI AGUNG NANDA ADINATA</a>
+        <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 14.&nbsp;&nbsp;&nbsp;  I GUSTI NGURAH YOGI INDRAWAN</a>
+        <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 15.&nbsp;&nbsp;&nbsp;  I KADEK ADITYA SURYA YUDISTIRA</a>
+        <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 16.&nbsp;&nbsp;&nbsp;  I KADEK ANGGANTARA PUTRA</a>
+        <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 17.&nbsp;&nbsp;&nbsp;  I KOMANG TRI MAHAYANA</a>
+        <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 18.&nbsp;&nbsp;&nbsp;  I MADE ADI ANGGAYANA</a>
+        <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 19.&nbsp;&nbsp;&nbsp;  I MADE DANAN JAYA</a>
+        <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 20.&nbsp;&nbsp;&nbsp;  I MADE SANDYA ISYANA</a>
+        <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 21.&nbsp;&nbsp;&nbsp;  I PUTU TRESSNA ARISTA</a>
+        <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 22.&nbsp;&nbsp;&nbsp;  KADEK INTAN PRABASWARI</a>
+        <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 23.&nbsp;&nbsp;&nbsp;  KOMANG INA OKTAVIANI</a>
+        <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 24.&nbsp;&nbsp;&nbsp;  MADE HANDHIKA WIGUNA</a>
+        <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 25.&nbsp;&nbsp;&nbsp;  NI KADEK PRATISTA HAPSARI MANIK</a>
+        <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 26.&nbsp;&nbsp;&nbsp;  NI KETUT ARI PERTIWI</a>
+        <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 27.&nbsp;&nbsp;&nbsp;  NI LUH ADE THRESIA</a>
+        <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 28.&nbsp;&nbsp;&nbsp;  NI MADE DEA RAHMADANI</a>
+        <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 29.&nbsp;&nbsp;&nbsp;  NI MADE DINDA PRAMAPUTRI</a>
+        <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 30.&nbsp;&nbsp;&nbsp;  NI PUTU ANGGI RIZAPANI</a>
+        <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 31.&nbsp;&nbsp;&nbsp;  NI PUTU ARY PUTRI CAHYANI</a>
+        <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 32.&nbsp;&nbsp;&nbsp;  NI PUTU NAVANITHA APRILIA PRASANTHI</a>
+        <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 33.&nbsp;&nbsp;&nbsp;  NI PUTU RISMA CAHYANI</a>
+        <a href="/soalUlangan/matriks/zje1cm4r11kqjgmmzc.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 34.&nbsp;&nbsp;&nbsp;  NYOMAN ARYA WEDANTA PRAJA GAUTAMA</a>
+        <a href="/soalUlangan/matriks/zf15c14sk3nhethr5r.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 35.&nbsp;&nbsp;&nbsp;  PANDE PUTU ABY GOTAMA</a>
+        <a href="/soalUlangan/matriks/z13i93ozczr1neh6d9.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 36.&nbsp;&nbsp;&nbsp;  PANDE PUTU SIVAZEKA MAHENDRA</a>
+        <a href="/soalUlangan/matriks/zr976pde0u2vol70lq.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 37.&nbsp;&nbsp;&nbsp;  PUTU RADINA RIAFANY</a>
+        <a href="/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 38.&nbsp;&nbsp;&nbsp;  PUTU RAMA ADITYA NUGRAHA</a>
+        <a href="/soalUlangan/matriks/zm97o4ya9dwh0q3r03.html" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold"> 39.&nbsp;&nbsp;&nbsp;  SANG NYOMAN TRI WISESA MAHA JAYA</a>
         
     
   </div>
